<resources>
    <string name="app_name">AMQCM</string>

    <!-- Buttons, Labels & Hint text -->
    <string name="createRoom">Create room</string>
    <string name="joinRoom">Join room</string>
    <string name="profile">Profile</string>
    <string name="connect">Sign in</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="roomID">Room\'s Id</string>
    <string name="score">Score</string>

    <string name="test">test</string>

    <string name="roomNumber">Room n° : </string>
    <string name="buttonLaunchGame">Launch the game</string>
    <string name="numberMaxPlayer">Maximum number of players</string>
    <string name="numberMusic">Number of musics</string>
    <string name="responseTime">Response time</string>
    <string name="responseType">Response type</string>

    <!-- Text pop-up -->
    <string name="popupJoin">Enter the informations about the room to join</string>

    <!-- Errors -->

    <!-- Spinner contents -->
    <string-array name="array_responseType">
        <item>Anime</item>
        <item>Title</item>
        <item>Band</item>
    </string-array>

    <string name="connection_succeed">Connection succeed</string>
    <string name="error_no_internet">Error no internet</string>
    <string name="error_unknown_error">Unknown error</string>
    <string name="error_authentication_canceled">Error authentification canceled</string>
    <string name="button_update_account">Update account</string>
    <string name="button_sign_out_account">Sign out</string>
    <string name="button_delete_account">Delete account</string>
    <string name="info_no_email_found">No email found</string>
    <string name="info_no_username_found">No username found</string>
    <string name="loginMAL">Login MyAnimeList</string>

</resources>