<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoomActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="193dp"
        tools:layout_editor_absoluteY="137dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/room_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile" />

            <TextView
                android:id="@+id/room_roomNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/roomNumber"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/room_playerList"
                android:layout_width="120dp"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/numberMusic"
                    android:textAlignment="center" />

                <Spinner
                    android:id="@+id/room_numberMusic"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:entries="@array/default_numberMusics" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/numberMaxPlayer"
                    android:textAlignment="center"
                    tools:layout_conversion_absoluteHeight="19dp"
                    tools:layout_conversion_absoluteWidth="178dp" />

                <Spinner
                    android:id="@+id/room_numberMaxPlayer"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:entries="@array/default_numberMaxPlayer" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/responseTime"
                    android:textAlignment="center" />

                <Spinner
                    android:id="@+id/room_responseTime"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:entries="@array/default_responseTime" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/responseType"
                    android:textAlignment="center" />

                <Spinner
                    android:id="@+id/room_responseType"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:entries="@array/array_responseType" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="53dp" />

                <!--<Button
                    android:id="@+id/room_buttonLaunchGame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClickGame"
                    android:text="@string/buttonLaunchGame" />-->

                <Button
                    android:id="@+id/room_buttonLaunchGame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickGame"
                    android:text="@string/buttonLaunchGame"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>