<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" tools:context="com.example.projetembarque.view.ProfileActivity" android:orientation="vertical" android:gravity="center_horizontal">
    <!--  USER DATA CONTAINER  -->
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center" android:orientation="vertical" android:layout_weight="1">

        <!--  PROFILE USERNAME  -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_activity_edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="18sp" />
        <!--  PROFILE EMAIL CONTAINER  -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_activity_edit_text_loginMAL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginMAL"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="14sp"
                android:textStyle="bold" />
            <!--  PROFILE EMAIL  -->
            <TextView
                android:id="@+id/profile_activity_text_view_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login"
                android:textSize="14sp" />
        </LinearLayout>
        <!--  CHECKBOX IS USER MENTOR  -->
    </LinearLayout>
    <!--  BUTTONS CONTAINER  -->
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="bottom" android:orientation="vertical" android:layout_weight="1">
        <!--  BUTTON UPDATE USERNAME  -->
        <Button
            android:id="@+id/profile_activity_button_update"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickUpdateButton"
            android:text="@string/button_update_account"
            android:textColor="#fff"
            android:textSize="14sp" />
        <!--  BUTTON SIGN OUT  -->
        <Button
            android:id="@+id/profile_activity_button_sign_out"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickSignOutButton"
            android:text="@string/button_sign_out_account"
            android:textColor="#fff"
            android:textSize="14sp" />
        <!--  BUTTON DELETE ACCOUNT  -->
        <Button
            android:id="@+id/profile_activity_button_delete"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickDeleteButton"
            android:text="@string/button_delete_account"
            android:textColor="#fff"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>