<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/profile"
        android:layout_width="279dp"
        android:layout_height="79dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="230dp"
        android:text="@string/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinRoom" />

    <Button
        android:id="@+id/createRoom"
        android:layout_width="279dp"
        android:layout_height="79dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="198dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="28dp"
        android:text="@string/createRoom"
        app:layout_constraintBottom_toTopOf="@+id/joinRoom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/joinRoom"
        android:layout_width="279dp"
        android:layout_height="79dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="38dp"
        android:text="@string/joinRoom"
        app:layout_constraintBottom_toTopOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRoom" />

</androidx.constraintlayout.widget.ConstraintLayout>